#include "Guerrier.h"

class Arab : public Guerrier {
    public:
        Arab();
};