#pragma once
#include "Arme.h"

class Magic_wand : public Arme {
    public:
        Magic_wand(string name);
};