#include "Guerrier.h"

class Pirate : public Guerrier {
    public:
        Pirate();
};