@startuml
skinparam classAttributeIconSize 0


class Bataille {
    - int type_jeu
    - Clan* clan1
    - Clan* clan2
    --
    + Bataille(int type)
    + ~Bataille()
    + void afficher() const
    + void jouer() // Méthode virtuelle pure
    + void creer_clan_user() // Méthode virtuelle pure
}

class Bataille_user {
    --
    + Bataille_user()
    + ~Bataille_user()
    + void creer_clan_user() // Redéfinie la méthode virtuelle de Bataille
    + void afficher() const
    + void jouer()
    + Clan* creer_clan(const string& playerName) // Méthode pour créer un clan pour l'utilisateur
}
class Bataille_PC {
    - Nv_difficulte Niveau
    - int numGuerriers
    --
    + Bataille_PC()
    + ~Bataille_PC()
    + void choisirNiveau()
    + void afficher() const
    + void jouer()
    + void creer_clan_Pc()
    + void creer_clan_user() // Redéfinie la méthode virtuelle de Bataille
}

class Guerrier {
    - string Name
    - float Health
    - float Power
    - float Attack
    - float Resistance 
    - float Vitesse
    - Arme* arme
    --
    - void armAEffect()
    --
    + Guerrier(string name, float health, float attack, float vitesse)
    + Guerrier(const Guerrier& guerrier)
    + Guerrier& operator=(const Guerrier& other)
    + string getName() const
    + float CalculatePower()
    + void getHit(float hit)
    + float Hit()
    + void addArme(Arme* arme)
    + bool checkName(string name) const
    + bool checkHealth() const
    + void DifficultyEffect(Nv_difficulte Niveau)
    + void showGuerrier() const
}
class Viking {
    + Viking()
    + ~Viking()
}

class Persian {
    + Persian()
    + ~Persian()
}

class Arab {
    + Arab()
    + ~Arab()
}

class Pirate {
    + Pirate()
    + ~Pirate()
}
class Arme {
    - string Name
    - float AttackEffect
    - float ResistanceEffect
    - float VitesseEffect
    - float HealthEffect
    --
    + Arme(string name, float attackEffect, float resistanceEffect, float vitesseEffect, float healthEffect)
    + float affectHealth(float health) const
    + float affectAttack(float attack) const
    + float affectResistance(float resistance) const
    + float affectVitesse(float vitesse) const
    + bool isMagic() const
    + void showArme() const
}

class Axe {
    + Axe(string name)
}

class Shield {
    + Shield(string name)
}

class Sword {
    + Sword(string name)
}

class Magic_wand {
    + Magic_wand(string name)
}

class Clan {
    - string Name
    - vector<Guerrier> Guerriers
    - double Power
    --
    + Clan(string name)
    + void CalculatePower()
    + void AddGuerrier(const Guerrier& guerrier)
    + void RemoveGuerrier(const string& name)
    + void showClan() const
    + const vector<Guerrier>& getGuerriers() const
    + int sizeOfClan() const
    + void ApplyDifficulty(Nv_difficulte Niveau)
    + Guerrier& getGuerrier(int index)
}

Bataille "1" *-- "2" Clan 
Bataille_PC -|> Bataille 
Clan "1" -- "*" Guerrier : contains

Bataille_user -|> Bataille  

Axe --|> Arme
Shield --|> Arme
Sword --|> Arme
Magic_wand --|> Arme
Guerrier "*" *-- "1" Arme
Viking --|> Guerrier
Persian --|> Guerrier
Arab --|> Guerrier
Pirate --|> Guerrier


@enduml